# online-ml

./: .gitignore  README.md  config.props  config.template  install-k8s-dashboard.sh  run.sh  setenv.sh  shutdown.sh  token.sh  useful-cmds.txt
.github/workflows/: structurizr-cli.yaml
argo/: install-argocd.sh  uninstall-argocd.sh
aws/: add-policy.sh  add_known_host.sh  connect.sh  ec2-instance-connect-all.json  find_by_name.sh  find_instance.sh  get_field.sh  kube_connection.sh  kubeconfig.template  public_connect.sh  setup-user.sh
docs/: certbot.txt  useful-cmds.txt
haproxy/: connect.sh  gen-conf.sh  gen-haproxy.sh  haproxy.conf  make-conf.sh  make-haproxy.sh  nginx.conf  setup.sh  update-haproxy.sh
haproxy/site/: index.html
kops/: cleanup.sh  gen-terraform.sh  gen-tofu.sh  kubectl-context.sh  state-store.sh
kubernetes/: add-config.sh  config-secrets.sh  forward_api.sh  get_control_plane_id.sh  install-dashboard.sh  kube-connection.sh  kube_connection.sh  kubeconfig.template  setup-ingress.sh  test.sh
minfer/: Cargo.toml  Dockerfile  README.md  build.sh  clean.sh  release.sh  run.sh
minfer/src/: main.rs
redpanda/: connect.sh  install.sh  pv.yaml  topic.yaml  uninstall.sh
scylladb/: configure.sh  connect.sh  ddl.cql  setup.sh
structurizr/: get_url.sh  helm-values.yaml  ingress.yaml  install.sh  model.dsl  port-forward.sh
terraform/: haproxy.tf  k8s-eice.tf  kubernetes.tf.patch  kubernetes.tf.patch.bak1  nat.tf  redpanda.tf  run-cluster.sh  scylladb.tf  shutdown-cluster.sh
tofu/: nat.tf  run-cluster.sh  scylladb.tf  shutdown-cluster.sh  static.tf
(+9 files in other folders)
