[package]
name = "minfer"
version = "0.1.0"
edition = "2021"

[profile.dev]
# Must always use panic = "abort" to avoid needing to define the unstable eh_personality lang item.
panic = "abort"

[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.

[dependencies]
chrono = "0.4.37"
libc = { version = "0.2", default-features = false }
rust-tradier = { git = "https://github.com/mentics/rust-tradier.git", branch = "main" }
